@@ -181,6 +181,13 @@ echo "Call makeGlyGenAnnot.sh (uniprotload.sh)" | tee -a ${LOG}
 STAT=$?
 checkStatus ${STAT} "makeGlyGenAnnot.sh (uniprotload.sh)"
 
+echo "" >> ${LOG}
+date >> ${LOG}
+echo "Post UniProt postUniprot.sh (uniprotload.sh)" | tee -a ${LOG}
+./postUniprot.sh 2>&1 >> ${LOG}
+STAT=$?
+checkStatus ${STAT} "postUniprot.sh (uniprotload.sh)"
+
 #
 # run postload cleanup and email logs
 #
