@@ -1,3 +1,12 @@
+TAG: uniprotload-6-0-26-?
+DATE: 07/16/2024
+STAFF: lec
+CHANGES:
+wts2-1555/Cross-references changes in UniProt
+        new file:   bin/postUniProt.py
+        new file:   bin/postUniProt.sh
+        modified:   bin/uniprotload.sh
+
 TAG: uniprotload-6-0-23-1
 DATE: 03/29/2024
 STAFF: lec
